<resources>
    <string name="app_name">Stormy</string>
    <string name="error_title">Oops! Sorry</string>
    <string name="error_content">There was an error. Please try again</string>
    <string name="error_button_ok_text">OK</string>
    <string name="network_unavailable_message">Sorry, the network unavailable.</string>
    <string name="city_novosibirsk">Novosibirsk</string>
    <string name="currentTimeTextView">12:00</string>
    <string name="currentTemperatureTextView">20</string>
    <string name="degree_icon_description">Degree icon</string>
    <string name="weather_icon_description">Current weather icon</string>
    <string name="precipitation">Precipitation</string>
    <string name="precipitation_value">0 mm</string>
    <string name="wind">Wind</string>
    <string name="wind_value">10 km/h</string>
    <string name="cloudy">Cloudiness</string>
    <string name="cloudy_value">0%</string>
    <string name="t0000_temperature_text_view">20 °C</string>
    <string name="t0100_temperature_text_view">20 °C</string>
    <string name="t0200_temperature_text_view">20 °C</string>
    <string name="t0300_temperature_text_view">20 °C</string>
    <string name="t0400_temperature_text_view">20 °C</string>
    <string name="t0500_temperature_text_view">20 °C</string>
    <string name="t0600_temperature_text_view">20 °C</string>
    <string name="t0700_temperature_text_view">20 °C</string>
    <string name="t0800_temperature_text_view">20 °C</string>
    <string name="t0900_temperature_text_view">20 °C</string>
    <string name="t1000_temperature_text_view">20 °C</string>
    <string name="t1100_temperature_text_view">20 °C</string>
    <string name="t1200_temperature_text_view">20 °C</string>
    <string name="t1300_temperature_text_view">20 °C</string>
    <string name="t1400_temperature_text_view">20 °C</string>
    <string name="t1500_temperature_text_view">20 °C</string>
    <string name="t1600_temperature_text_view">20 °C</string>
    <string name="t1700_temperature_text_view">20 °C</string>
    <string name="t1800_temperature_text_view">20 °C</string>
    <string name="t1900_temperature_text_view">20 °C</string>
    <string name="t2000_temperature_text_view">20 °C</string>
    <string name="t2100_temperature_text_view">20 °C</string>
    <string name="t2200_temperature_text_view">20 °C</string>
    <string name="t2300_temperature_text_view">20 °C</string>
    <string name="t0000_wind_text_view">10 km/h</string>
    <string name="t0100_wind_text_view">10 km/h</string>
    <string name="t0200_wind_text_view">10 km/h</string>
    <string name="t0300_wind_text_view">10 km/h</string>
    <string name="t0400_wind_text_view">10 km/h</string>
    <string name="t0500_wind_text_view">10 km/h</string>
    <string name="t0600_wind_text_view">10 km/h</string>
    <string name="t0700_wind_text_view">10 km/h</string>
    <string name="t0800_wind_text_view">10 km/h</string>
    <string name="t0900_wind_text_view">10 km/h</string>
    <string name="t1000_wind_text_view">10 km/h</string>
    <string name="t1100_wind_text_view">10 km/h</string>
    <string name="t1200_wind_text_view">10 km/h</string>
    <string name="t1300_wind_text_view">10 km/h</string>
    <string name="t1400_wind_text_view">10 km/h</string>
    <string name="t1500_wind_text_view">10 km/h</string>
    <string name="t1600_wind_text_view">10 km/h</string>
    <string name="t1700_wind_text_view">10 km/h</string>
    <string name="t1800_wind_text_view">10 km/h</string>
    <string name="t1900_wind_text_view">10 km/h</string>
    <string name="t2000_wind_text_view">10 km/h</string>
    <string name="t2100_wind_text_view">10 km/h</string>
    <string name="t2200_wind_text_view">10 km/h</string>
    <string name="t2300_wind_text_view">10 km/h</string>
    <string name="refresh_image_view">Refresh</string>
</resources>