<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    tools:context=".WeatherForTheDay">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/t0000IconImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/weather_icon_description"
                    app:layout_constraintBottom_toTopOf="@+id/currentTemperatureTextView"
                    app:layout_constraintEnd_toStartOf="@+id/currentTimeTextView"
                    tools:srcCompat="@drawable/cloudy" />

                <TextView
                    android:id="@+id/t0000TemperatureTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    tools:text="@string/t0000_temperature_text_view" />

                <TextView
                    android:id="@+id/t0000WindTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    tools:text="@string/t0000_wind_text_view" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/t0100IconImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/weather_icon_description"
                    app:layout_constraintBottom_toTopOf="@+id/currentTemperatureTextView"
                    app:layout_constraintEnd_toStartOf="@+id/currentTimeTextView"
                    tools:srcCompat="@drawable/cloudy" />

                <TextView
                    android:id="@+id/t0100TemperatureTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    tools:text="@string/t0100_temperature_text_view" />

                <TextView
                    android:id="@+id/t0100WindTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    tools:text="@string/t0100_wind_text_view" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/t0200IconImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/weather_icon_description"
                    app:layout_constraintBottom_toTopOf="@+id/currentTemperatureTextView"
                    app:layout_constraintEnd_toStartOf="@+id/currentTimeTextView"
                    tools:srcCompat="@drawable/cloudy" />

                <TextView
                    android:id="@+id/t0200TemperatureTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    tools:text="@string/t0200_temperature_text_view" />

                <TextView
                    android:id="@+id/t0200WindTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    tools:text="@string/t0200_wind_text_view" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/t0300IconImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/weather_icon_description"
                    app:layout_constraintBottom_toTopOf="@+id/currentTemperatureTextView"
                    app:layout_constraintEnd_toStartOf="@+id/currentTimeTextView"
                    tools:srcCompat="@drawable/cloudy" />

                <TextView
                    android:id="@+id/t0300TemperatureTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    tools:text="@string/t0300_temperature_text_view" />

                <TextView
                    android:id="@+id/t0300WindTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    tools:text="@string/t0300_wind_text_view" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/t0400IconImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/weather_icon_description"
                    app:layout_constraintBottom_toTopOf="@+id/currentTemperatureTextView"
                    app:layout_constraintEnd_toStartOf="@+id/currentTimeTextView"
                    tools:srcCompat="@drawable/cloudy" />

                <TextView
                    android:id="@+id/t0400TemperatureTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    tools:text="@string/t0400_temperature_text_view" />

                <TextView
                    android:id="@+id/t0400WindTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    tools:text="@string/t0400_wind_text_view" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/t0500IconImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/weather_icon_description"
                    app:layout_constraintBottom_toTopOf="@+id/currentTemperatureTextView"
                    app:layout_constraintEnd_toStartOf="@+id/currentTimeTextView"
                    tools:srcCompat="@drawable/cloudy" />

                <TextView
                    android:id="@+id/t0500TemperatureTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    tools:text="@string/t0500_temperature_text_view" />

                <TextView
                    android:id="@+id/t0500WindTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    tools:text="@string/t0500_wind_text_view" />
            </LinearLayout>
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>