<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="currentWeather"
            type="com.malka.stormy.HourlyWeatherData" />

        <variable
            name="weatherUnits"
            type="com.malka.stormy.HourlyUnits" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/currentTemperatureTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@{String.valueOf(currentWeather.temperature_2m)}"
        android:textColor="@color/white"
        android:textSize="200sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentTimeTextView" />

    <ImageView
        android:id="@+id/degreeImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        app:layout_constraintStart_toEndOf="@+id/currentTemperatureTextView"
        app:layout_constraintTop_toTopOf="@+id/currentTemperatureTextView"
        app:srcCompat="@drawable/degree"
        android:contentDescription="@string/degree_icon_description" />

    <TextView
        android:id="@+id/cityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/city_novosibirsk"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/currentIconImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toTopOf="@+id/currentTemperatureTextView"
        app:layout_constraintEnd_toStartOf="@+id/currentTimeTextView"
        tools:srcCompat="@drawable/cloudy"
        android:contentDescription="@string/weather_icon_description" />

    <TextView
        android:id="@+id/currentTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        tools:text="@string/currentTimeTextView"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityTextView" />

    <LinearLayout
        android:id="@+id/extraWeatherLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/currentTemperatureTextView">

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cloudyTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cloudy"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/currentCloudyValueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@{String.valueOf(currentWeather.cloudcover) + ' ' + String.valueOf(weatherUnits.cloudcover)}" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/windTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/currentWindValueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@{String.valueOf(currentWeather.windspeed_10m) + ' ' + String.valueOf(weatherUnits.windspeed_10m)}" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/precipitationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/precipitation"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/currentPrecipitationValueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@{String.valueOf(currentWeather.rain + currentWeather.snowfall) + ' ' + String.valueOf(weatherUnits.rain)}" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:onClick="refreshOnClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/extraWeatherLayout"
        app:srcCompat="@drawable/refresh"
        android:contentDescription="@string/refresh_image_view" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>